--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ plugins {
 
 ext {
     navVersion = '2.5.1'
+    retrofitVersion = '2.9.0'
+    glideVersion = '4.12.0'
 }
 
 task clean(type: Delete) {
